spade-tests/src/snapshots/spade_tests__hir_lowering__tests__invalid_field_access.snap
---
source: spade-tests/src/hir_lowering.rs
---
struct X {}

entity main(x: X) -> int<8> {
    x.not_a_field
}


error: X has no field named not_a_field
  ┌─ testinput:4:7
  │
4 │     x.not_a_field
  │       ^^^^^^^^^^^ Not a field of X


